@@ -1,4 +1,4 @@
-.TH HDPARM 8 "March 2009" "Version 9.13"
+.TH HDPARM 8 "April 2009" "Version 9.14"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
